Fix header alignment for mobile screens

--- a/design-assignment/styles.css
+++ b/design-assignment/styles.css
@@ -9,12 +9,13 @@ body {
 #header {
     max-width: 100%;
     margin-right: 0;
+    margin-left: 0;
     padding-bottom: 6px;
 }
 
 #header-row {
     max-width: 100%;
-    margin-right: 0;
+    margin: 0;
 }
 
 #logo img {
@@ -30,8 +31,8 @@ body {
 }
 
 #cart {
-    margin-right: 5%;
-    padding: 2.5rem 1.5rem 0.5rem 0;
+    margin-right: 0;
+    padding: 2.5rem 1.4rem 0.5rem 0;
     line-height: 1.2;
     text-align: right;
     color: #000000AA;
